<resources>
    <string name="app_name">WanAndroid</string>
    <string name="home_page">首页</string>
    <string name="knowledge_system">知识体系</string>
    <string name="guide">导航</string>
    <string name="project">项目</string>
    <string name="collection">收藏</string>
    <string name="todo_tools">TODO工具</string>
    <string name="dark_mode">夜间模式</string>
    <string name="settings">设置</string>
    <string name="about_us">关于我们</string>
    <string name="logout">退出登录</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="search">搜索</string>
    <string name="label_hot_key">热门搜索</string>
    <string name="label_common_webs">常用网站</string>
    <string name="delete">delete</string>
</resources>
