<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/home_page"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/home_page"
        android:icon="@mipmap/homepage" />
    <item android:id="@+id/knowledge_system"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/knowledge_system"
        android:icon="@mipmap/menu" />
    <item android:id="@+id/guide"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/guide"
        android:icon="@mipmap/guide" />
    <item android:id="@+id/projects"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/project"
        android:icon="@mipmap/folder" />
</menu>